--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.12.4",
+    "magic-sdk": "^17.1.3",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
