--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.10.0",
+    "cookie": "^0.5.0",
     "framer-motion": "^10.12.4",
+    "jsonwebtoken": "^9.0.0",
     "magic-sdk": "^17.1.3",
     "next": "13.3.1",
     "react": "18.2.0",
