--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@magic-sdk/admin": "^1.10.0",
     "cookie": "^0.5.0",
     "framer-motion": "^10.12.4",
+    "jose": "^4.15.4",
     "jsonwebtoken": "^9.0.0",
     "magic-sdk": "^17.1.3",
     "next": "13.3.1",
